# crossometer-firmware

./: .gitignore  Cargo.toml  README.md  SETUP.md  config.rs.example  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
src/: barometer.rs  buzzer.rs  display.rs  gps.rs  main.rs  sdcard.rs  state.rs
src/boards/: crossometer-mini_v0.1.rs
