[package]
name = "crossometer-firmware"
version = "0.1.0"
authors = ["Thibaut Lorrain <fredszaq@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "crossometer-firmware"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.51.0", default-features = false }
esp-idf-hal = "0.45.2"
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-sync = "0.7.0"
embedded-sdmmc = { git = "https://github.com/marcfir/embedded-sdmmc-rs.git", rev = "0ebc69c3ca192b8d023c213ad95f0ac87fd02ef0" }
igc_parser = "0.1.7"
embassy-futures = "0.1.1"
embedded-hal = "1.0.0"
#bme280 = "0.5.1"
#bme280 = { git = "https://github.com/fredszaq/bme280-rs.git", rev = "5cada2522fbfb7637d99ac4126f3444b553e0bf9" }
bme280 = { git = "https://github.com/VersBinarii/bme280-rs", rev = "49d179ed48701df444e58c9e591c81355b6b3189", features = ["async"] }
embedded-graphics = "0.8.1"
ssd1306 = "0.10.0"
nb = "1.0.0"
#nmea-parser = "0.11.0"
nmea-parser = { git = "https://github.com/fredszaq/nmea-parser.git", rev = "529ecd9f581442782080520bb150d49a5443f5dd" }

[build-dependencies]
embuild = { version = "0.33.1", features = ["espidf"] }

[patch.crates-io]
radium = { git = 'https://github.com/ferrilab/ferrilab', rev = "d45d8fddb27dd9900c72adbbdb7108b355028a8f" }
